--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@angular/compiler-cli": "^14.1.0",
     "@typescript-eslint/eslint-plugin": "5.29.0",
     "@typescript-eslint/parser": "5.29.0",
+    "angular-in-memory-web-api": "^0.14.0",
     "eslint": "^8.18.0",
     "typescript": "~4.7.2"
   }
